add icon and modify the key function

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <body style="width: 200px; height: 150px">
+  <body style="width: 250px; height: 200px">
     <h3>AutoScroll Extension</h3>
     <p>Estado: <span id="status">Desactivado</span></p>
     <button id="toggleButton">Activar/Desactivar</button>
-    <!-- Puedes agregar opciones de configuración aquí si es necesario -->
+    <p>Velocidad: <input type="number" id="speedInput" min="1" max="20" /></p>
     <script src="popup.js"></script>
   </body>
 </html>
